java 21 and build changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 myapp.fixedRate=${APP_TIME_DB}
+server.servlet.context-path=/api
