--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 myapp.fixedRate=${APP_TIME_DB}
 server.servlet.context-path=/api
+
+spring.datasource.hikari.minimum-idle=${SPRING_DATASOURCE_POOL_MIN:1}
+spring.datasource.hikari.maximum-pool-size=${SPRING_DATASOURCE_POOL_MAX:2}
+spring.datasource.hikari.data-source-properties=v$session.program=oci-app-bcp
+
+#logging.level.com.zaxxer=DEBUG
+#logging.level.org.springframework.jdbc.core=DEBUG
